k8s/airconnect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airconnect
  namespace: homeassistant
  labels:
    app: airconnect
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: airconnect
  template:
    metadata:
      labels:
        app: airconnect
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: k8s-cp
      containers:
        - name: airconnect
          image: 1activegeek/airconnect:latest
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: airconnect-config
